clause-extraction/force-app/main/default/objects/Clause__c/Clause__c.object-meta.xml
<CustomObject>
    <label>Clause</label>
    <nameField>
        <label>Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clauses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>