clause-extraction/force-app/main/default/objects/Clause__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>